--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.1",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
