--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-image-picker": "^14.3.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-native": "0.71.8",
+    "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5"
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.18.10",
+    "expo-barcode-scanner": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
